--- a/src/templates/layouts/default.html
+++ b/src/templates/layouts/default.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-        {{>header}}
+    {{>header}}
     </header>
      {{> body}}
     <footer>footer</footer>
-<script src="donut.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html> 
