--- a/src/scss/1-base/_base.scss
+++ b/src/scss/1-base/_base.scss
@@ -1,104 +1,109 @@
 // box sizing
 html {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
-*, *:before, *:after {
-	box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
-
-// reset 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-margin: 0;
-padding: 0;
-border: 0;
-font-size: 100%;
-font-family: inherit;
-vertical-align: baseline; }
 
 svg {
-	vertical-align: middle;
+  vertical-align: middle;
 }
-// images 
-img, video {
-	vertical-align:middle;
-	border:none;
-	max-width: 100%;
-	height: auto;
+
+// images
+img,
+video {
+  vertical-align: middle;
+  border: none;
+  max-width: 100%;
+  height: auto;
 }
 
 a {
-color: $c-link;
-text-decoration: none;
+  color: $c-link;
+  text-decoration: none;
 }
-  
-// HTML5 display-role reset for older browsers
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-display: block; }
 
-nav ul { margin: 0; list-style: none; }
-nav li { margin: 0; }
+nav ul {
+  margin: 0;
+  list-style: none;
+}
+nav li {
+  margin: 0;
+}
 
-blockquote, q {
-quotes: none; }
+blockquote,
+q {
+  quotes: none;
+}
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0; }
-
-body {
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-    font-family: $f-family;
-    line-height: $f-line-height;
-    text-rendering: optimizeLegibility;
-	color: $c-text;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-// forms 
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: $f-family;
+  line-height: $f-line-height;
+  text-rendering: optimizeLegibility;
+  color: $c-text;
+}
+
+// forms
 button,
 input,
 select,
 optgroup,
 textarea {
-	color: inherit;
-	font-family: inherit;
-	font-weight: 400;
-	line-height: $f-line-height;
-	text-rendering: inherit;
+  color: inherit;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 100%;
+  line-height: $f-line-height;
+  text-rendering: inherit;
 }
 
 button {
-	cursor: pointer;
-}
-// margins
-h1, h2, h3, h4, h5, h6 {
-	margin-bottom: .5em;
-}
-p, ul, ol, blockquote {
-	margin-bottom: ($f-line-height * 1em);
+  cursor: pointer;
 }
 
-ul, ol {
-	margin-left: 2em;
+// margins
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0.5em;
+}
+p,
+ul,
+ol,
+blockquote {
+  margin-top: 0;
+  margin-bottom: ($f-line-height * 1em);
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-left: 2em;
 }
 li {
-	margin-bottom: .2em;
-}
- 
-ul, ol, p {
-	+ h2, + h3, + h4  {
-		padding-top: 1em;
-	}
+  margin-bottom: 0.2em;
 }
 
-/** 
- * Sticky footer
-*/
-.page-wrapper {
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-}
-main {
-	flex-grow: 1;
+ul,
+ol,
+p {
+  + h2,
+  + h3,
+  + h4 {
+    padding-top: 1em;
+  }
 }
