--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import '0-abstracts/mixins';
 
 // 1 - Base 
+@import '1-base/normalize';
 @import '1-base/base';
 @import '1-base/typography';
 @import '1-base/utility-classes';
