--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,10 @@
 // Structure The 7–1 Pattern with Abstracts instead helpers
 // https://www.sitepoint.com/architecture-sass-project/ 
 
+
+// vendors
+@import 'normalize.css/normalize';
+
 // 0 - Abstracts Scss utils
 @import '0-abstracts/settings';
 @import '0-abstracts/mixins';
@@ -29,3 +33,4 @@
 @import '4-pages/home';
 @import '4-pages/catalog';
 @import '4-pages/inscription';
+
