--- a/src/templates/layouts/default.html
+++ b/src/templates/layouts/default.html
@@ -12,7 +12,7 @@
     {{>header}}
     </header>
      {{> body}}
-    <footer>footer</footer>
+    <footer class="main-footer">footer</footer>
 <script src="js/app.js"></script>
 </body>
 </html> 
